cosinnus/static/less/v3_main_content_patches.less
.v2-dashboard {
    margin-top: 0;
}

/** Map container needs to be at 50px top, not 55px in v3 */
.app-root, .app-fullscreen, .map-fullscreen, .tile-list-fullscreen {
    top: 50px; /** Navbar compensation */
}
/** The full-50%-screen tile overlay */
.app-fullscreen .tile-detail {
    margin-top: 50px;
}

/** un-reset list styles */
menu, ol, ul {
    list-style-type: revert;
    list-style-position: inside;
    padding-left: 22px;
}

/** Missing styles for OSMfield buttons */
button.osmfield-sync, button.osmfield-clear {
    display: inline-block;
    background-color: @color-light-medium-gray;
    padding: 2px 5px;
    border: 1px solid @color-dark-gray;
    cursor: pointer;
    border-radius: 3px;
}

.portal-inlink img {
    display: inline;
}

